[package]
edition = "2021"
name = "https-server-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.34.0"
fltk = "^1.2.22"
lazy_static = "^1.4.0"
openssl = "^0.10.38"
openssl-sys = "^0.9.72"
rust-fsm = "0.6.0"
rxrust = "^0.15.0"
threadpool = "^1.8.1"
