[package]
edition = "2021"
name = "https-server-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.34.0"
fltk = "^1.2.22"
handlebars = "^4.1.6"
lazy_static = "^1.4.0"
num_cpus = "^1.13.1"
openssl = "^0.10.38"
openssl-sys = "^0.9.72"
rust-fsm = "^0.6.0"
serde_json = "^1.0.73"
threadpool = "^1.8.1"
urlencoding = "^2.1.0"

[target.x86_64-pc-windows-msvc.dependencies]
fltk = {version = "1.2", features = ["use-ninja"]}
